# rust-examples

./: .gitignore  Cargo.toml  README.md
collections/examples/: hashmap-01.rs  hashmap-03.rs  hashmap-04.rs  string-02.rs  vector-01.rs  vector-02.rs  vector-03.rs  vector-04.rs
enums/examples/: ex-02.rs
examples/: cli-input.rs  closure-01.rs  closure-02.rs  closure-03.rs  closure-04.rs  closure-05.rs  closure-06.rs  enum-01.rs  enum-03.rs  error-01.rs  error-03.rs  error-04.rs  error-05.rs  flow-01.rs  flow-04.rs  flow-07.rs  flow-08.rs  foo.rs  generics-01.rs  generics-02.rs  hashmap-02.rs  mutability.rs  numbers.rs  pointer-01.rs  pointer-02.rs  pointer-03.rs  pointer-04.rs  pointer-05.rs  pointer-06.rs  pointer-07.rs  pointer-08.rs  pointer-09.rs  pointer-10.rs  pointer-11.rs  re-define.rs  string-01.rs  string-03.rs  string-04.rs  struct-01.rs  traits-01.rs  (+3 more)
examples/bar/: main.rs  util.rs
exceptions/: Cargo.toml
exceptions/examples/: ex-02.rs  ex-06.rs  ex-07.rs
flow-control/examples/: ex-01.rs  ex-02.rs  ex-03.rs  ex-05.rs  ex-06.rs
flow-control/src/: lib.rs
generics-traits/examples/: lifetime-01.rs  traits-01.rs  traits-02.rs
generics-traits/src/: news_article.rs  summary.rs
inputs/src/: lib.rs
minigrep/: README.md
minigrep/src/: lib.rs  main.rs
restaurant/src/: lib.rs
restaurant_new/: Cargo.toml
restaurant_new/src/: back_of_house.rs  lib.rs
restaurant_new/src/front_of_house/: hosting.rs  serving.rs
src/: input.rs  lib.rs  math.rs  summary.rs
src/summary/: tweet.rs
structs/examples/: ex-01.rs  ex-02.rs
structs/src/: lib.rs
variables/examples/: arrays.rs
variables/src/: lib.rs
