[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
variables = {path = "./variables"}
flow_control = {path = "./flow-control"}
structs = {path = "./structs"}
inputs = {path = "./inputs"}

[workspace]
members = [
    "variables",
    "flow-control",
    "structs",
    "inputs",
]


