[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backyard = {path = "./backyard"}
restaurant = {path = "./restaurant"}
restaurant_new = {path = "./restaurant_new"}
minigrep = {path = "./minigrep"}


[workspace]
members = [
    "backyard",
    "restaurant",
    "restaurant_new",
    "minigrep",
]


